# estudos-lp3

00-aula-git/: comandos-git.txt
exercicio-template/: pyproject.toml
exercicio-template/exercicio_template/: app.py
exercicio-template/exercicio_template/static/: style.css  style2.css
exercicio-template/exercicio_template/templates/: como_utilizar.html  contato.html  home.html  layout.html  layout2.html  politica_privacidade.html  produtos.html  termos_de_uso.html
exercicios-funcoes/: Ex06.py
